Regression from 102->103 reflow does not work anymore
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox104 | --- | wontfix |
| firefox105 | --- | verified |
| firefox106 | --- | verified |
People
(Reporter: tobias.gomer, Assigned: emilio)
References
(Regression)
Details
(Keywords: hang, regression)
Attachments
(2 files)
|
486.30 KB,
application/x-zip-compressed
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
I use the HTML and CSS in the appendix. Applying a classname to an element and retrieving style informations using window.getComputedStyle() did work fine in the past. Now the applying a class for the second time has no effect anymore.
Just load the noreflow.html. I test this on WIndow 11 with Firefox 104 & 103
Actual results:
The Javascript runs until Firefox supposes to end it. Using getComputedStyle (or accessing element.offsetHeight f.i.) does not trigger a reflow anymore.
Expected results:
Calling getComputedStyle should return the actual styles as used in the classes.
This is like other Browsers (Chrome, Safari, and Edge) do. And Firefox < 102.
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::DOM: Core & HTML' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•3 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9566586e3ec5fc70f97c4d6bc88dcf9a2f839e41&tochange=e7a6d5cb7db2ff8b08f6fb0a0213f35c49e651c5
Comment 3•3 years ago
|
||
:emilio, since you are the author of the regressor, bug 1381071, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 4•3 years ago
|
||
| Assignee | ||
Comment 5•3 years ago
|
||
Comment on attachment 9293917 [details]
Bug 1789997 - Invalidate undisplayed style cache for attribute mutations on undisplayed children. r=boris,#style,#layout
Beta/Release Uplift Approval Request
- User impact if declined: Trivial correctness fix.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial tweak.
- String changes made/needed: none
- Is Android affected?: Yes
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 8•3 years ago
|
||
| bugherder | ||
Comment 10•3 years ago
|
||
Comment on attachment 9293917 [details]
Bug 1789997 - Invalidate undisplayed style cache for attribute mutations on undisplayed children. r=boris,#style,#layout
Approved for 105.0rc1.
Comment 11•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Comment 12•3 years ago
|
||
Reproduced the issue with Firefox 106.0a1 (20220909212835) on Windows 10x64. The attached noreflow.html loads endlessly.
The issue is verified fixed with Firefox 106.0a1 (20220911214030) and Firefox 105.0b10 (20220911172111) from comment 11 on Windows 10x64, macOS 11 and Ubuntu 22. The attached noreflow.html is successfully loaded displaying Found 1687 classes on the page.
Description
•