Bug 1789997 - Invalidate undisplayed style cache for attribute mutations on undisplayed children. r=boris

Differential Revision: https://phabricator.services.mozilla.com/D156946